fix sonar issues
Signed-off-by: Anis Tajouri <anis.tajouri@gmail.com>